# solana-bet

./: .gitignore  README.md  package-lock.json  package.json
front/: package.json
front/public/: index.html
front/src/: App.tsx  index.tsx
front/src/components/Carousel/: Slider.tsx
front/src/components/Chat/: Chat.tsx  Message.tsx  TextInput.tsx
front/src/components/Navbar/: Navbar.tsx
front/src/components/Sidebar/: Sidebar.tsx
front/src/context/: isSideBar.tsx
scripts/: cicd.sh
smartContract/: .gitignore  package-lock.json  package.json  tsconfig.json
smartContract/src/client/: main.d.ts  main.js  main.ts
smartContract/src/program/accounts/: john.json
smartContract/src/server/api/: .env  server.ts
smartContract/src/server/api/chat/: chat.ts
smartContract/src/server/api/controller/: user.controller.ts
smartContract/src/server/api/dal/: user.dal.ts
smartContract/src/server/api/models/: chat.models.ts
smartContract/src/server/api/routes/: user.routes.ts
smartContract/src/server/api/security/: crypto.sec.ts
smartContract/src/server/api/services/: user.service.ts
smartContract/src/server/api/smart/: smart.ts
src/client/: main.ts
src/program/: Cargo.toml
src/program/accounts/: ringo.json
src/program/src/: lib.rs
src/server/api/: server.ts
src/server/api/chat/: chat.ts
src/server/api/controller/: user.controller.ts
src/server/api/dal/: user.dal.ts
src/server/api/models/: message.models.ts  user.models.ts
src/server/api/services/: user.service.ts
